--- a/src/QuantumComputing.tex
+++ b/src/QuantumComputing.tex
@@ -601,7 +601,7 @@ In Dirac notation, if $\lambda$ is non-degenerate, we refer to the only eigenvec
 	TODO \todo{TODO}
 \end{proof}
 
-The following theorem provides a characterization of the eigenvalues and eigenvectors of self-adjoint and unitary operators, which have suprisingly nice properties.
+The following theorem provides a characterization of the eigenvalues and eigenvectors of self-adjoint and unitary operators, which have surprisingly nice properties.
 
 \begin{framedthm}{Spectral theorem}
 	The following propositions hold:
@@ -1238,13 +1238,13 @@ Before explaining the next algorithm that we are going to describe, we first nee
 
 The \tbf{Discrete Fourier Transform (DFT)} is a very powerful tool used in many applications and probably most widely known for its use in signal processing. Indeed, the Fourier transform is used to transform a signal defined on the \tit{time domain} into its equivalent in the \tit{frequency domain}. We will briefly explore the most important concepts that define the DFT to have a better understanding in order to the progress with its quantum counterpart.
 
-First, what is the \curlyquotes{time domain}? When we sample a signal, we usually sample such signal through some finite amount of time, and we discretize such time interval --- this is why we consider the Discrete Fourier transform. What we are interested in is to transform such signal into the \curlyquotes{frequency domain}, which essentially means to understand what frequencies of sinusoids contribute to our signal and in which percentage. To do this, we will use some concepts of Linear Algebra. Say that the signal we sampled is discretized into $N$ parts, thust our sample lives in the $\R^N$ space --- it is nothing but a vector of $N$ complex values which describe the signal at each timestep. When we say \curlyquotes{time domain}, what we mean is basically this exact vector, i.e. expressed in the canonical orthonormal basis $$e_0 = \rmat{1 \\ 0 \\ \vdots \\ 0 } \quad e_1 = \rmat{0 \\ 1 \\ \vdots \\ 0} \quad \ldots \quad e_{N - 1} = \rmat{0 \\ \vdots \\ 0 \\ 1}$$ (we will start counting at 0 for convenience). In other words, if our signal is defined by some vector $$\mathbf x = \rmat{t_0 \\ t_1 \\ \vdots \\ t_{N - 1}}$$ it holds that $$\mathbf x = \sum_{n = 0}^{N - 1}{t_n e_n}$$
+First, what is the \curlyquotes{time domain}? When we sample a signal, we usually sample such signal through some finite amount of time, and we discretize such time interval --- this is why we consider the Discrete Fourier transform. What we are interested in is to transform such signal into the \curlyquotes{frequency domain}, which essentially means to understand what frequencies of sinusoids contribute to our signal and in which percentage. To do this, we will use some concepts of Linear Algebra. Say that the signal we sampled is discretized into $N$ parts, thus our sample lives in the $\R^N$ space --- it is nothing but a vector of $N$ complex values which describe the signal at each timestep. When we say \curlyquotes{time domain}, what we mean is basically this exact vector, i.e. expressed in the canonical orthonormal basis $$e_0 = \rmat{1 \\ 0 \\ \vdots \\ 0 } \quad e_1 = \rmat{0 \\ 1 \\ \vdots \\ 0} \quad \ldots \quad e_{N - 1} = \rmat{0 \\ \vdots \\ 0 \\ 1}$$ (we will start counting at 0 for convenience). In other words, if our signal is defined by some vector $$\mathbf x = \rmat{t_0 \\ t_1 \\ \vdots \\ t_{N - 1}}$$ it holds that $$\mathbf x = \sum_{n = 0}^{N - 1}{t_n e_n}$$
 
-Then, what is the \curlyquotes{frequency domain}? We need some preliminary observations to describe it. Our goal is to take into account the frequencies that define our signal, therefore we need to move into a space in which frequencies are \curlyquotes{first-class citizens}. The idea is to use each possible sinusoid by varying the frequence, add up their contributions, and weight the latter in the precise way that allows us to reconstruct our original signal. Let us fix a component $n \in [0, N - 1]$, and first consider only cosinusoids, for instance $$\cos(2 \pi \cdot 0 \cdot n) \quad \cos(2 \pi \cdot 1 \cdot n) \quad \cos(2 \pi \cdot 2 \cdot n) \quad \ldots \quad \cos(2 \pi \cdot (N - 1) \cdot n)$$ Basically, we are trying to construct a basis built on each possible frequency $f$ by obtaining a basis vector $\cos(2 \pi \cdot f \cdot n)$. Moreover, we will consider $\cos (2 \pi m n / N)$ for $m \in [0, N - 1]$ since it can be shown that the number of possible frequencies that can be represented on a $N$-sized time window is exactly $N - 1$, and to scale the frequency accordingly we just need to divide $m$ over $N$, the size of the sample.
+Then, what is the \curlyquotes{frequency domain}? We need some preliminary observations to describe it. Our goal is to take into account the frequencies that define our signal, therefore we need to move into a space in which frequencies are \curlyquotes{first-class citizens}. The idea is to use each possible sinusoid by varying the frequency, add up their contributions, and weight the latter in the precise way that allows us to reconstruct our original signal. Let us fix a component $n \in [0, N - 1]$, and first consider only cosinusoids, for instance $$\cos(2 \pi \cdot 0 \cdot n) \quad \cos(2 \pi \cdot 1 \cdot n) \quad \cos(2 \pi \cdot 2 \cdot n) \quad \ldots \quad \cos(2 \pi \cdot (N - 1) \cdot n)$$ Basically, we are trying to construct a basis built on each possible frequency $f$ by obtaining a basis vector $\cos(2 \pi \cdot f \cdot n)$. Moreover, we will consider $\cos (2 \pi m n / N)$ for $m \in [0, N - 1]$ since it can be shown that the number of possible frequencies that can be represented on a $N$-sized time window is exactly $N$, and to scale the frequency accordingly we just need to divide $m$ over $N$, the size of the sample.
 
 Is this enough to reach our goal? Can we describe any signal in this way? Well, we observe that $m$ is ranging from $0$ to $N -1$, but $\cos(- \theta) = \cos(\theta)$, which implies that $$m > \dfrac{N}{2} \implies \cos(2 \pi m n/ N) = \cos(2 \pi (N - m) n / N)$$ In other words, basically half of our basis vectors add no information at all. Indeed, the span of the vectors we chose has size $$\dim \rbk{\mbox{span}\rbk{\cbk{\cos(2 \pi \cdot m\cdot n/ N)}_{m = 1}^{N - 1}}} = \soe{ll}{\tfrac{N}{2} + 1 & \mbox{$N$ is even} \\ \tfrac{N + 1}{2} & \mbox{$N$ is odd}} $$ where the last added 1 comes from the fact that when $m = 0$ we generate $\cos(0) = 1$ which is really linearly independent from the others cosines. This suggests that cosinusoids alone are not enough to describe our space.
 
-Hence, the most natural thing that we can do is add the contributions of sinusoids as well. A geometric interpretation of the fact that cosinusoids are not enough is that sinusoids are just phase-shifted cosines, but the shift in phase is not captured by changing the frequencies of the cosines alone. We need the contributions of some \curlyquotes{altered} cosinusoids --- in terms of phases --- to get an actual basis and be able to represent any possible vector. Hence, let's consider additional $N$ sinusoids $$\sin(2 \pi \cdot 0 \cdot n) \quad \sin(2 \pi \cdot 1 \cdot n) \quad \sin(2 \pi \cdot 2 \cdot n) \quad \ldots \quad \sin(2 \pi \cdot (N - 1) \cdot n)$$ Do we get a base of size more than $N$ then? We observe that $\sin(\theta) = - \sin (-\theta)$, therefore we have that $$m > \dfrac{N}{2} \implies \sin(2 \pi m n/N) = - \sin (2\pi (N - m) n/N)$$ which again it implies that half of these sinusoids add no useful information. However, in this case we also have the fact that $\sin(0) = \sin(\pi n) = 0$, which means that these two sinusoid cannot be considered because they are the 0 vector of this space. Therefore, we get that $$\dim \rbk{\mbox{span}\rbk{\cbk{\cos(2 \pi \cdot m\cdot n/ N)}_{m = 1}^{N - 1}}} = \soe{ll}{\tfrac{N}{2} - 1 & \mbox{$N$ is even} \\ \tfrac{N - 1}{2} & \mbox{$N$ is odd}}$$ Finally, this means that putting all these cosines and sinusoids together we form a base for a space that has size $$\soe{ll}{\tfrac{N}{2} + 1 + \tfrac{N}{2} - 1 = N & \mbox{$N$ is even} \\ \tfrac{N + 1}{2} + \tfrac{N - 1}{2} = N & \mbox{$N$ is odd}} = N$$ Hence, we can fully describe $\R^N$, namely for any vector $\mathbf x \in \R^N$ we have that $$\forall n \in [0, N- 1] \quad \mathbf x(n) = \sum_{m = 0}^{N - 1}{\alpha_m \cos(2\pi m n/N)} + \sum_{m = 0}^{N - 1}{\beta_m \sin(2\pi m n/N)}$$ by describing the vector component-wise.
+Hence, the most natural thing that we can do is add the contributions of sinusoids as well. A geometric interpretation of the fact that cosinusoids are not enough is that sinusoids are just phase-shifted cosines, but the shift in phase is not captured by changing the frequencies of the cosines alone. We need the contributions of some \curlyquotes{altered} cosinusoids --- in terms of phases --- to get an actual basis and be able to represent any possible vector. Hence, let's consider additional $N$ sinusoids $$\sin(2 \pi \cdot 0 \cdot n) \quad \sin(2 \pi \cdot 1 \cdot n) \quad \sin(2 \pi \cdot 2 \cdot n) \quad \ldots \quad \sin(2 \pi \cdot (N - 1) \cdot n)$$ Do we get a base of size more than $N$ then? We observe that $\sin(\theta) = - \sin (-\theta)$, therefore we have that $$m > \dfrac{N}{2} \implies \sin(2 \pi m n/N) = - \sin (2\pi (N - m) n/N)$$ which again it implies that half of these sinusoids add no useful information. However, in this case we also have the fact that $$\sin(2 \pi \cdot 0 \cdot n /M) =  \sin(0)  = 0$$ and for $N$ even it also happens that $$\sin(2\pi \cdot (N/2) \cdot n/N) = \sin(\pi n) = 0$$ which means that these two sinusoid cannot be considered because they are the 0 vector of this space. Therefore, we get that $$\dim \rbk{\mbox{span}\rbk{\cbk{\cos(2 \pi \cdot m\cdot n/ N)}_{m = 1}^{N - 1}}} = \soe{ll}{\tfrac{N}{2} - 1 & \mbox{$N$ is even} \\ \tfrac{N - 1}{2} & \mbox{$N$ is odd}}$$ Finally, this means that putting all these cosines and sinusoids together we form a base for a space that has size $$\soe{ll}{\tfrac{N}{2} + 1 + \tfrac{N}{2} - 1 = N & \mbox{$N$ is even} \\ \tfrac{N + 1}{2} + \tfrac{N - 1}{2} = N & \mbox{$N$ is odd}} = N$$ Hence, we can fully describe $\R^N$, namely for any vector $\mathbf x \in \R^N$ we have that $$\forall n \in [0, N- 1] \quad \mathbf x(n) = \sum_{m = 0}^{N - 1}{\alpha_m \cos(2\pi m n/N)} + \sum_{m = 0}^{N - 1}{\beta_m \sin(2\pi m n/N)}$$ by describing the vector component-wise.
 
 Furthermore, we observe that this basis is actually orthogonal. \todo{prove it, boring}
 
@@ -1286,27 +1286,25 @@ In other words, the principal $n$-th root of unity is the first root (after 1) t
 
 Therefore, we have that this sum is equal to 0 if and only if $\omega^p \neq 1$ and $\omega^{pn} = 1$. However, we observe that if $\omega^p = 1$, since $p \in [n - 1]$ this would imply that the order of $\omega$ is less than $n$, meaning that $\omega$ was not a principal root.
 
-Principal $n$-th roots of unity are fundamental in order to describe the DFT matrix, as defined below. \todo{remove tilde omega completely}
+Now that we presented roots of unity we can finally present how the DFT matrix is usually defined.
 
 \begin{frameddefn}{Discrete Fourier Transform}
-    Given a commutative ring $R$ of dimension $N$, the \tbf{Discrete Fourier Transform (DFT)} matrix in $R$ is defined as follows: $$\forall j,k \in [0, N - 1] \quad \mbox{DFT}_{jk} = \tilde \omega^{jk}$$ where $\omega$ is the principal $N$-th root of unity, and $\tilde \omega = \omega ^{-1}$.
+    Given a commutative ring $R$ of dimension $N$, the \tbf{Discrete Fourier Transform (DFT)} matrix in $R$ is defined as follows: $$\forall j,k \in [0, N - 1] \quad \mbox{DFT}_{jk} = \omega^{-jk}$$ where $\omega$ is the principal $N$-th root of unity.
 \end{frameddefn}
 
-Therefore, in general the DFT matrix looks like this: $$\mbox{DFT} := \rmat{1 & 1 & 1 & \cdots & 1 \\ 1 & \tilde \omega & \tilde \omega^2 & \cdots & \tilde \omega^{N - 1} \\ 1 & \tilde \omega^2 & \tilde \omega^4 & \cdots & \tilde \omega^{2(N - 1)} \\ \vdots & \vdots & \vdots & \ddots & \vdots \\ 1 & \tilde \omega^{N - 1} & \tilde \omega^{2(N - 1)} & \cdots & \tilde \omega^{(N - 1)^2}}$$
+Therefore, in general the DFT matrix looks like this: $$\mbox{DFT} := \rmat{1 & 1 & 1 & \cdots & 1 \\ 1 & \omega^{-1} & \omega^{-2} & \cdots & \omega^{-(N - 1)} \\ 1 & \omega^{-2} & \omega^{-4} & \cdots & \omega^{-2(N - 1)} \\ \vdots & \vdots & \vdots & \ddots & \vdots \\ 1 & \omega^{-(N - 1)} & \omega^{-2(N - 1)} & \cdots & \omega^{-(N - 1)^2}}$$
 
-Note that, in simpler terms, we have that $$\forall j,k  \in [0, N - 1] \quad \mbox{DFT}_{jk} = \tilde \omega^{jk } = \omega^{-jk}$$ Why do we use $\tilde \omega$ instead of $\omega$? The reason is that this is just a convention to make hte frequency ordering increase as $k$ increases --- if we used $\omega^{jk}$, the Fourier basis would still be orthogonal, but the frequency ordering would be reversed, i.e $k = 0$ would correspond to the 0 frequency but $k = 1$ would correspond to the \tit{highest frequency}. Moreover, we usually define the DFT matrix by setting $\omega = e^{\tfrac{2 \pi i}{n}}$, thus getting $$\forall j , k \in [0, N - 1] \quad \mbox{DFT}_{jk} = e^{-2 \pi i j k /N}$$ (the matrix is usually written without the fraction notation).
+Moreover, we usually define the DFT matrix by setting $\omega = e^{\tfrac{2 \pi i}{n}}$, thus getting $$\forall j , k \in [0, N - 1] \quad \mbox{DFT}_{jk} = e^{-2 \pi i j k /N}$$ Indeed, having presented the intuition behing the DFT beforehand, it's now fairly obvious the reason why the DFT matrix looks like this: its just the matrix that performs the change of basis, and since the basis of the DFT space can be defined in terms of $n$-th roots of unity, this is the matrix we get.
 
-Why do we define the matrix of DFT with roots of unity? \todo{boh trova la risposta prima di scriverla}
+Furthermore, not surprisingly the DFT matrix is invertible, in fact we have that $$\forall j , k \in [0, N - 1] \quad \mbox{IDFT}_{jk} = \mbox{DFT}^{-1}_{jk } = \dfrac{1}{N}\omega^{jk} = \dfrac{1}{N}e^{+2 \pi i j k /N}$$ and this matrix takes the name of \tbf{Inverse Discrete Fourier Transform (IDFT)}.
 
-Interestingly enough, the DFT matrix is invertible, in fact we have that $$\forall j , k \in [0, N - 1] \quad \mbox{DFT}^{-1}_{jk } = \dfrac{1}{N}\tilde \omega^{-j k }= \dfrac{1}{N}\omega^{jk} = \dfrac{1}{\sqrt N}\omega^{+2 \pi i j k /N}$$ and this matrix takes the name of \tbf{Inverse Discrete Fourier Transform}.
-
-Now, we are going to define the quantum equivalent of the DFT, the so called \tbf{Quantum Fourier Transform}.
+Then, can't we just use the DFT matrix in quantum computations whenever we need it and be done? The problem is that the DFT matrix is clearly not unitary: if we look closely, we see that the columns of the DFT matrix are only orthogonal and not orthonormal. Thus, to solve this problem, we need to normalize the column vectors.
 
 \begin{frameddefn}{Quantum Fourier Transform}
-    Given a Hilbert space $\mathcal H$ of size $N$, the \tbf{Quantum Fourier Transform (QFT)} matrix in $\mathcal H$ is defined as follows: $$\forall j, k \in [0, N - 1] \quad \mbox{QFT}_{jk} = \dfrac{1}{\sqrt N}\tilde \omega^{-jk}$$ where $\omega$ is the principal $N$-th root of unity, and $\tilde \omega = \omega^{-1}$.
+    Given a Hilbert space $\mathcal H$ of size $N$, the \tbf{Quantum Fourier Transform (QFT)} matrix in $\mathcal H$ is defined as follows: $$\forall j, k \in [0, N - 1] \quad \mbox{QFT}_{jk} = \dfrac{1}{\sqrt N}\omega^{jk}$$ where $\omega$ is the principal $N$-th root of unity.
 \end{frameddefn}
 
-As we can see, the definition is fairly similar to the DFT one, except that the matrix is scaled by $\tfrac{1}{\sqrt N}$ as we usually to in quantum mechanics. Thus, in general the QFT matrix looks like this: $$\mbox{QFT} := \rmat{1 & 1 & 1 & \cdots & 1 \\ 1 & \tilde \omega & \tilde \omega^{-2} & \cdots & \tilde \omega^{-(N - 1)} \\ 1 & \tilde \omega^{-2} & \tilde \omega^{-4} & \cdots & \tilde \omega^{-2(N - 1)} \\ \vdots & \vdots & \vdots & \ddots & \vdots \\ 1 & \tilde \omega^{-(N - 1)} & \tilde \omega^{-2(N - 1)} & \cdots & \tilde \omega^{-(N - 1)^2}}$$ Furthermore, we observe that if the input is a basis vector $\ket k$, the output will be the $k$-th column of the QFT matrix, which can be succintly written as follows: $$\mbox{QFT} \ket k = \dfrac{1}{\sqrt N} \sum_{j = 0}^{N - 1} \tilde \omega^{-jk} \ket j = \dfrac{1}{\sqrt N} \sum_{j = 0}^{N - 1}e^{+2 \pi i j k / N} \ket j $$
+We observe that the QFT matrix has positive exponents, which is just a convention employed in quantum computing. Therefore, we get the following matrix: $$\mbox{QFT} := \rmat{1 & 1 & 1 & \cdots & 1 \\ 1 & \omega & \omega^2 & \cdots & \omega^{N - 1} \\ 1 & \omega^2 & \omega^4 & \cdots & \omega^{2(N - 1)} \\ \vdots & \vdots & \vdots & \ddots & \vdots \\ 1 & \omega^{N - 1} & \omega^{2(N - 1)} & \cdots & \omega^{(N - 1)^2}}$$ In particular, we observe that if the input is a basis vector $\ket k$, the output will be the $k$-th column of the QFT matrix, which can be succinctly written as follows: $$\mbox{QFT} \ket k = \dfrac{1}{\sqrt N} \sum_{j = 0}^{N - 1}e^{+2 \pi i j k / N} \ket j $$
 
 \printbibliography % UNCOMMENT FOR BIBLIOGRAPHY
 
